--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "node-dev": "~2.0.1",
     "tap": "~0.4"
   },
+  "engines": {
+    "node": ">=0.10.3"
+  },
   "keywords": [
     "mock",
     "api",
