--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
   "name": "canned",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "serve canned responses to mock an api, based on files in a folder",
   "main": "canned.js",
   "scripts": {
     "test": "./node_modules/tap/bin/tap.js ./test",
-    "start": "node ./bin/canned",
-    "dev": "./node_modules/node-dev/bin/node-dev ./bin/canned"
+    "start": "./bin/canned"
   },
   "bin": "./bin/canned",
   "repository": {
