--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "type": "git",
     "url": "https://github.com/sideshowcoder/canned"
   },
+  "dependencies": {
+    "optimist": "~0.3.7"
+  },
   "devDependencies": {
     "node-dev": "~2.0.1",
     "tap": "~0.4"
@@ -25,5 +28,5 @@
     "server"
   ],
   "author": "Philipp Fehre @sideshowcoder",
-  "license": "MIT"
+  "license": "MIT",
 }
