--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "canned",
-  "version": "0.1.3",
+  "version": "0.2.0",
   "description": "serve canned responses to mock an api, based on files in a folder",
   "main": "canned.js",
   "scripts": {
@@ -17,7 +17,8 @@
   },
   "devDependencies": {
     "node-dev": "~2.0.1",
-    "tap": "~0.4"
+    "tap": "~0.4",
+    "jasmine-node": "~1.10.2"
   },
   "engines": {
     "node": ">=0.10.3"
