--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "url": "https://github.com/sideshowcoder/canned"
   },
   "dependencies": {
-    "optimist": "~0.3.7"
+    "optimist": "~0.3.7",
+    "bluebird": "latest"
   },
   "devDependencies": {
     "node-dev": "~2.0.1",
