--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   },
   "dependencies": {
     "optimist": "~0.3.7",
-    "async": "*"
+    "async": "*",
+    "express": "*"
   },
   "devDependencies": {
     "node-dev": "~2.0.1",
