--- a/package.json
+++ b/package.json
@@ -13,12 +13,12 @@
     "url": "https://github.com/sideshowcoder/canned"
   },
   "dependencies": {
-    "optimist": "~0.3.7"
+    "optimist": "^0.6.0"
   },
   "devDependencies": {
-    "jasmine-node": "^1.10.2",
-    "jshint": "~2.3.0",
-    "node-dev": "~2.0.1"
+    "jasmine-node": "^1.14.2",
+    "jshint": "^2.7.0",
+    "node-dev": "^2.6.1"
   },
   "engines": {
     "node": ">=0.10.3"
