--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "url": "https://github.com/sideshowcoder/canned"
   },
   "dependencies": {
+    "lodash": "^3.10.1",
     "optimist": "^0.6.0"
   },
   "devDependencies": {
