--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "canned",
   "version": "0.3.6",
   "description": "serve canned responses to mock an api, based on files in a folder",
-  "main": "canned.js",
+  "main": "index.js",
   "scripts": {
     "test": "make test",
     "start": "./bin/canned"
