--- a/.travis.yml
+++ b/.travis.yml
@@ -6,3 +6,11 @@ node_js:
   - "0.12"
   - "0.11"
   - "0.10"
+notifications:
+  webhooks:
+    urls:
+      - https://webhooks.gitter.im/e/30d8496b867bc082157a
+    on_success: change  # options: [always|never|change] default: always
+    on_failure: always  # options: [always|never|change] default: always
+    on_start: never     # options: [always|never|change] default: always
+
